--- a/plann_app/pubspec.yaml
+++ b/plann_app/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+2
+version: 1.1.0+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -38,12 +38,10 @@ dependencies:
   sqflite: ^1.3.0
   path: ^1.6.4
   flutter_icons: ^1.1.0
-
   purchases_flutter: ^1.1.1
-
   flutter_launcher_icons: ^0.7.5
-
   url_launcher: ^5.4.10
+  amplitude_flutter: ^2.0.0
 
 dev_dependencies:
   flutter_test:
