--- a/plann_app/pubspec.yaml
+++ b/plann_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_i18n: ^0.13.0
   provider: ^4.0.4
   datetime_picker_formfield: ^1.0.0
+  grouped_list: ^3.3.0
   sqflite: ^1.3.0
   path: ^1.6.4
   flutter_icons: ^1.1.0
