--- a/plann_app/pubspec.yaml
+++ b/plann_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_launcher_icons: ^0.7.5
   url_launcher: ^5.4.10
   amplitude_flutter: ^2.2.0
+  flutter_slidable: ^0.5.7
 
 dev_dependencies:
   flutter_test:
