--- a/plann_app/pubspec.yaml
+++ b/plann_app/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^5.4.10
   amplitude_flutter: ^2.2.0
   flutter_slidable: ^0.5.7
+  smooth_page_indicator: ^0.2.0
 
 dev_dependencies:
   flutter_test:
