--- a/plann_app/pubspec.yaml
+++ b/plann_app/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.5.0+1
+version: 1.4.1+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -42,9 +42,10 @@ dependencies:
   purchases_flutter: ^1.2.1
   flutter_launcher_icons: ^0.7.5
   url_launcher: ^5.4.10
-  amplitude_flutter: ^2.2.0
+#  amplitude_flutter: ^2.2.0
   flutter_slidable: ^0.5.7
   smooth_page_indicator: ^0.2.0
+  appmetrica_sdk: ^0.0.5+2
 
 dev_dependencies:
   flutter_test:
